--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -5,6 +5,9 @@
 
 <body>
   <div class="header">
+
+    <a href={{url_for('showOAuthProviders')}}>Login</a>
+
     <h1>Catalog</h1>
   </div>
 
@@ -40,6 +43,7 @@
   </br>
   </br>
   {% endfor %}
+
 
 
 </body>
