Create Authentication, Authorization and json endpoint

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -6,12 +6,10 @@
 <body>
   <div class="header">
 
-    <a href={{url_for('showOAuthProviders')}}>Login</a>
+    <a href={{url_for('showLogin')}}>Login</a>
 
     <h1>Catalog</h1>
   </div>
-
-  <a href="{{url_for('newItem')}}">Create New Item</a>
 
   </br>
   </br>
