--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -23,7 +23,7 @@
 
 </form>
 
-<a href={{url_for('showItem', category_id=item.cat_id, item_id=item.id)}}>Cancel</a>
+<a href={{url_for('showItemIn', category_id=item.cat_id, item_id=item.id)}}>Cancel</a>
 
 </body>
 </html>
