--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -22,7 +22,11 @@
 
 </br>
 </br>
-<input type='submit' value='Add'>
+<input type='submit' value='Save'>
+
+</br>
+</br>
+<a href="{{url_for('showCatalogIn')}}">Cancel</a>
 
 </form>
 
