--- a/templates/showitemin.html
+++ b/templates/showitemin.html
@@ -17,8 +17,13 @@
   </br>
   {{item.category.name}}
   </br>
+  <a href="{{url_for('editItem', category_id=item.cat_id, item_id=item.id)}}">Edit</a>
+  <a href="{{url_for('deleteItem', item_id=item.id)}}">Delete</a>
+
   </br>
-  <a href="{{url_for('showCatalog')}}">Back</a>
+  </br>
+  </br>
+  <a href="{{url_for('showCatalogIn')}}">Back</a>
 
 </body>
 
