--- a/templates/catalogin.html
+++ b/templates/catalogin.html
@@ -1,9 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Catalog</title>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-   <script src="https://apis.google.com/js/platform.js?onload=start"> </script>
 
 <!--script>
     gapi.load('auth2', function() {
@@ -75,7 +79,8 @@
     </script-->
   <!-- END GOOGLE SIGN IN CODE -->
 
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="https://apis.google.com/js/platform.js?onload=start"> </script>
 </body>
 
 </html>
