Apply style to Catalog(in) page

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -29,7 +29,7 @@
   </header>
 
 
-  <div class="container-fluid" id="categories">
+  <div class="container-fluid bg-light" id="categories">
     <div class="row">
       <div class="col-2">
         <nav class="nav flex-column pt-4 pl-2" role="navigation">
