--- a/templates/catalogin.html
+++ b/templates/catalogin.html
@@ -5,47 +5,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Catalog</title>
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
-<!--script>
-    gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-        //client_id: '950296359546-tr6a0qci8smluvackvmj51bruuu73qos.apps.googleusercontent.com',
-        client_id: '450835458575-3f2c2ck830mi5o0llfrvu0ut994r3so4.apps.googleusercontent.com',
-        // Scopes to request in addition to 'profile' and 'email'
-        //scope: 'additional_scope'
-      });
-    });
-</script-->
-
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename="style.css")}}">
 </head>
 
 <body>
-
   <header class="navbar sticky-top bg-dark">
-
-  <!--header class="navbar fixed-top navbar-light bg-light" id="login_and_title"-->
     <a class="navbar-brand mr-0 text-light" href="{{url_for('showCatalogIn')}}">Catalog</a>
     <form class="form-inline" action="{{url_for('disconnect')}}" method='GET'>
       <button class="btn btn-primary"  type="submit">Logout</button>
     </form>
   </header>
-
-
-  <!--div class="header">
-    <a href="{{url_for('disconnect')}}">Logout</a>
-    <h1>Catalog</h1>
-  </div-->
-
   <div class="container-fluid bg-light" id="categories">
     <div class="row">
       <div class="col-2">
         <nav class="nav flex-column pt-4 pl-2" role="navigation">
           {% for category in categories %}
           <div class="nav-item p-1">
-              {{category.name}}
+              <a href="{{url_for('showItemsIn', category_id=category.id)}}">
+                {{category.name}}
+              </a>
           </div>
           {% endfor %}
         </nav>
@@ -55,83 +34,51 @@
           <div class="col-1"></div>
           <div class="col">
             <div class="">
-              <a class="btn btn-primary btn-sm" href="{{url_for('newItem')}}" role="button">Create New Item</a>
-              <!--a href="{{url_for('newItem')}}">Create New Item</a-->
+              <a class="btn btn-primary btn-sm" href="{{url_for('newItem')}}" role="button">
+                Create New Item
+              </a>
             </div>
             </br>
-            </br>
+
+            {% if category=="" %}
+              <h4>Last Items</h4>
+            {% else %}
+              {% if count==1 %}
+                <h4>{{category}} ({{count}} item)</h4>
+              {% else %}
+                <h4>{{category}} ({{count}} items)</h4>
+              {% endif %}
+            {% endif %}
+
             {% for item in items %}
-            <article class="p-3 bg-white">
-                {{item.id}}</br>
-                <a href="{{url_for('showItem', category_id=item.cat_id, item_id=item.id)}}">{{item.title}}</a></br>
-                {{item.description}}</br>
-                {{item.cat_id}}</br>
-                {{item.category.name}}</br>
-            </article>
-            </br>
+            <div class="p-2 bg-white">
+                <a href="{{url_for('showItemIn', category_id=item.cat_id, item_id=item.id)}}">
+                  {% if category=="" %}
+                    {{item.title}} ({{item.category.name}})
+                  {% else %}
+                    {{item.title}}
+                  {% endif %}
+                </a>
+            </div>
             {% endfor %}
+
           </div>
           <div class="col-1"></div>
         </main>
+        <div class="row">
+          <div class="col bottom_space">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col bottom_space">
       </div>
     </div>
   </div>
-
-
-  <!--/br>
-  </br>
-</br>
-
-  {% for category in categories %}
-
-  {{category.name}}
-  </br>
-
-  {% endfor %}
-
-
-  </br>
-  </br>
-  </br>
-
-  {% for item in items %}
-
-  {{item.id}}
-  </br>
-  <a href="{{url_for('showItemIn', category_id=item.cat_id, item_id=item.id)}}">{{item.title}}</a>
-  </br>
-  {{item.description}}
-  </br>
-  {{item.cat_id}}
-  </br>
-  {{item.category.name}}
-  </br>
-  </br>
-  {% endfor %}-->
-
-
-
-  <!--a href='#' onclick="signOut();">Sign Out from Google <a/> -->
-
-  <!--script>
-      function signOut() {
-          auth2.signOut().then(function() {
-              console.log('User signed out.');
-              setTimeout(function() {
-                window.location.href = "/catalog";
-                }, 4000);
-          });
-      }
-    </script-->
-  <!-- END GOOGLE SIGN IN CODE -->
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-  <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-  <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="https://apis.google.com/js/platform.js?onload=start"> </script-->
 </body>
 
 </html>
