--- a/templates/login.html
+++ b/templates/login.html
@@ -4,48 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Login</title>
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!--link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}"-->
-    <style media="screen">
-      #login_area{
-        height: 400px;
-      }
-      #login_msg_box{
-        width: 100%;
-      }
-      .top_area{
-        height: 100px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename="style.css")}}">
   </head>
 
   <body>
-
     <header class="navbar sticky-top bg-dark" id="header_area">
       <a class="navbar-brand mr-0 text-light" href="{{url_for('showCatalog')}}">Catalog</a>
-
     </header>
-
     <main class="container-fluid" id="main_area">
-
       <div class="row">
         <div class="top_area">
-
         </div>
       </div>
-
       <div class="row">
-        <div class="col top_space">
-
+        <div class="col">
         </div>
-
       </div>
       <div class="row">
         <div class="col-4">
-
         </div>
         <div class="col">
           <div id="login_area" class="container border border-primary bg-light d-flex flex-wrap align-content-center justify-content-center">
@@ -62,29 +40,25 @@
               data-callback="signInCallback"
               data-approvalprompt="force">
               </span>
-
             </div>
             <div id="result" class="d-flex flex-wrap align-content-center justify-content-center"></div>
           </div>
         </div>
         <div class="col-4">
-
         </div>
-
       </div>
     </main>
-
-
-
     <script>
     function signInCallback(authResult) {
       if (authResult['code']) {
-        // Hide the sign-in button now that the user is authorized
+        // Hide the sign-in area now that the user is authorized
         $('#signinButton').attr('style', 'display: none');
         $('#login_msg_box').attr('style', 'display: none');
-        //$('#main_area').attr('style', 'display: none')
         $('#header_area').attr('style', 'display: none')
-        // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+        /* Send the one-time-use code to the server, if the
+        server responds, write a 'login successful' message
+        to the web page and then redirect back to the main
+        restaurants page */
         $.ajax({
           type: 'POST',
           url: '/gconnect?state={{STATE}}',
@@ -94,97 +68,31 @@
           success: function(result) {
             // Handle or verify the server response if necessary.
             if (result) {
-              $('#result').html('Login Successful!</br>'+ result + '</br><div><p>Redirecting...</p></div>')
+              $('#result').html('Login Successful!</br>'
+                                + result
+                                + '</br>'
+                                + '<div>'
+                                + '<p>Redirecting...</p>'
+                                + '</div>')
              setTimeout(function() {
               //window.location.href = "/catalogin";
               window.location.href = "{{url_for('showCatalogIn')}}"
              }, 4000);
-
           } else if (authResult['error']) {
         console.log('There was an error: ' + authResult['error']);
       } else {
-            $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+            $('#result').html('Failed to make a server-side call. '
+                              + 'Check your configuration and console.');
              }
           }
-
       }); } }
     </script>
-
-
-    <!--script>
-
-      window.fbAsyncInit = function() {
-      FB.init({
-        appId     : '218175865563645',
-        cookie    : true,
-        xfbml     : true,
-        version   : 'v2.8'
-      });
-      };
-
-      // Load the SDK asynchronously
-      (function(d, s, id) {
-        console.log('entrei');
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-
-      function sendTokenToServer() {
-        console.log('TESTE');
-        var access_token = FB.getAuthResponse()['accessToken'];
-        console.log('Welcome! Fetching your acess token... ');
-        console.log(access_token)
-        FB.api('/me', function(response) {
-          console.log('Successful login for: ' + response.name)
-          $.ajax({
-            type: 'POST',
-            url: '/fbconnect?state={{STATE}}',
-            processData: false,
-            data: access_token,
-            contentType: 'application/octet-stream; charset=utf-8',
-            success: function(result) {
-            if (result) {
-              $('#result').html('Login Successful!</br>' + result + '</br> Redirecting...')
-              setTimeout(function() {
-                window.location.href = "/restaurants/";
-              }, 4000);
-            } else {
-              $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-            }
-          }
-        });
-      });
-    }
-
-  </script-->
-
-
-    <!--button>
-      <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
-        <a href='javascript:sendTokenToServer()'>Login with Facebook</a>
-      </fb:login-button>
-    </button-->
-
-    <!--/br>
-    </br-->
-
-    <!--div
-      class="fb-like"
-      data-share="true"
-      data-width="450"
-      data-show-faces="true">
-    </div-->
-
-
+    <!--Bootstrap api-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    <!--Google sign-in api-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//apis.google.com/js/platform.js?onload=start"> </script>
-
   </body>
 </html>
