--- a/templates/showitem.html
+++ b/templates/showitem.html
@@ -1,10 +1,78 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Catalog: Item</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename="style.css")}}">
 </head>
 
 <body>
-  <div class="header">
+
+  <header class="navbar sticky-top bg-dark">
+
+  <!--header class="navbar fixed-top navbar-light bg-light" id="login_and_title"-->
+    <a class="navbar-brand mr-0 text-light" href="{{url_for('showCatalog')}}">Catalog</a>
+    <form class="form-inline" action="{{url_for('showLogin')}}" method='GET'>
+      <button class="btn btn-primary"  type="submit">Login</button>
+    </form>
+  </header>
+
+
+  <div class="container-fluid bg-light" id="categories">
+    <div class="row">
+      <div class="col space">
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <!--nav class="nav flex-column pt-4 pl-2" role="navigation">
+          {% for category in categories %}
+          <div class="nav-item p-1">
+              {{category.name}}
+          </div>
+          {% endfor %}
+        </nav-->
+      </div>
+      <div class="col">
+        <main class="row">
+          <div class="col-1"></div>
+          <div class="col">
+            <div class="title_box">
+              <h2>{{item.title}}</h2>
+            </div>
+            <div class="bg-white p-3">
+              {{item.description}}</br>
+            </div>
+            </br>
+            <div class="button_box pt-2">
+              <a class="btn btn-primary btn-sm" href="{{url_for('showCatalog')}}">Back</a>
+            </div>
+          </div>
+          <div class="col-1"></div>
+        </main>
+      </div>
+      <div class="col-2">
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="col space">
+
+      </div>
+    </div>
+  </div>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+  <!--div class="header">
     <h1>{{item.title}}</h1>
   </div>
 
@@ -18,7 +86,7 @@
   {{item.category.name}}
   </br>
   </br>
-  <a href="{{url_for('showCatalog')}}">Back</a>
+  <a href="{{url_for('showCatalog')}}">Back</a-->
 
 </body>
 
